# WritingMaster

./: parse_pptx.py  工作记录.md
.claude/: settings.local.json
src/grasp_yoloV8/: README.md  docker-compose.yml
src/grasp_yoloV8/docker/: .dockerignore
src/grasp_yoloV8/docs/: AGENTS.md  grasb.md  task.md
src/grasp_yoloV8/references/original_yolov8_ros1/: README.md  README_CN.md  requirements.txt
src/grasp_yoloV8/scripts/: build_main_ws.sh  clear_rm_err.py  enter_container.sh  init_build.sh  run_sim_move_test.sh  test_rm_move_obvious.py  test_rm_move_small_safe.py  test_rm_read.py
src/grasp_yoloV8/tools/hand_eye_calibration/: AGENTS.md  RobotToolPose.csv  calibration_verify_result.txt  chuang_trajectory.json  collect_data.py  compute_in_hand.py  config.yaml  extract_char_trajectory.py  verify_calibration.py
src/grasp_yoloV8/workspaces/rm_yolo_ros2_ws/src/vi_grab/: package.xml  setup.cfg  setup.py
src/grasp_yoloV8/workspaces/rm_yolo_ros2_ws/src/vi_grab/launch/: vi_grab_demo.launch.py
src/grasp_yoloV8/workspaces/rm_yolo_ros2_ws/src/vi_grab/vi_grab/: grasp_coordinator_node.py  object_detector_node.py
src/grasp_yoloV8/workspaces/step_motor_ros2_ws/src/step_motor/: CMakeLists.txt  ch9102_udev.sh  package.xml
src/grasp_yoloV8/workspaces/step_motor_ros2_ws/src/step_motor/msg/: Motor.msg
src/grasp_yoloV8/workspaces/step_motor_ros2_ws/src/step_motor/src/: motor_node.cpp
src/ros2_rm_robot/rm_bringup/launch/: rm_63_6f_gazebo.launch.py  rm_63_6fb_bringup.launch.py  rm_63_6fb_gazebo.launch.py  rm_63_III_6fb_bringup.launch.py  rm_63_III_gazebo.launch.py  rm_65_6fb_bringup.launch.py  rm_65_6fb_gazebo.launch.py  rm_75_6f_bringup.launch.py  rm_75_6f_gazebo.launch.py  rm_75_6fb_bringup.launch.py  rm_eco63_6fb_bringup.launch.py  rm_eco63_bringup.launch.py  rm_eco63_gazebo.launch.py  rm_eco65_6f_bringup.launch.py  rm_eco65_6f_gazebo.launch.py  rm_eco65_6fb_bringup.launch.py  rm_gen72_II_bringup.launch.py  rm_gen72_II_gazebo.launch.py  rm_gen72_bringup.launch.py
src/ros2_rm_robot/rm_control/: README.md  README_CN.md
src/ros2_rm_robot/rm_control/src/: rm_control.cpp
src/ros2_rm_robot/rm_description/: CMakeLists.txt  README.md  package.xml
src/ros2_rm_robot/rm_description/launch/: rm_63_6fb_display.launch.py  rm_65_6f_display.launch.py  rm_65_6fb_display.launch.py  rm_75_6fb_display.launch.py  rm_eco63_6fb_display.launch.py  rm_eco63_display.launch.py  rm_eco65_6fb_display.launch.py
src/ros2_rm_robot/rm_description/urdf/: rm_65_gazebo.urdf  rm_75_6fb.urdf  rm_75_description.csv  rm_75_gazebo.urdf  rm_eco65_gazebo.urdf  rm_gen72_II.urdf  rml_63_6fb.urdf  rml_63_gazebo.urdf
src/ros2_rm_robot/rm_driver/config/: rm_65_config.yaml
src/ros2_rm_robot/rm_example/: README_CN.md
src/ros2_rm_robot/rm_example/src/: api_MoveJ_demo.cpp  (+3 more)
src/ros2_rm_robot/rm_moveit2_config/: README_CN.md
(+193 files in other folders)
